package no.elhub.auth.v0.features.grants

import no.elhub.auth.v0.features.common.currentTimeUtc
import no.elhub.auth.v0.features.common.party.AuthorizationParty
import no.elhub.auth.v0.features.grants.common.AuthorizationGrantProperty
import java.time.OffsetDateTime
import java.util.UUID

data class AuthorizationGrant(
    val id: UUID,
    val grantStatus: Status,
    val grantedFor: AuthorizationParty,
    val grantedBy: AuthorizationParty,
    val grantedTo: AuthorizationParty,
    val grantedAt: OffsetDateTime,
    val validFrom: OffsetDateTime,
    val createdAt: OffsetDateTime,
    val updatedAt: OffsetDateTime,
    val validTo: OffsetDateTime,
    val sourceType: SourceType,
    val sourceId: UUID,
    val scopeIds: List<UUID>,
    val properties: List<AuthorizationGrantProperty>
) {
    companion object {
        fun create(
            grantedFor: AuthorizationParty,
            grantedBy: AuthorizationParty,
            grantedTo: AuthorizationParty,
            sourceType: SourceType,
            sourceId: UUID,
            scopeIds: List<UUID>,
            validFrom: OffsetDateTime,
            validTo: OffsetDateTime
        ): AuthorizationGrant =
            AuthorizationGrant(
                id = UUID.randomUUID(),
                grantStatus = Status.Active,
                grantedFor = grantedFor,
                grantedBy = grantedBy,
                grantedTo = grantedTo,
                grantedAt = currentTimeUtc(),
                validFrom = validFrom,
                createdAt = currentTimeUtc(),
                updatedAt = currentTimeUtc(),
                validTo = validTo,
                sourceId = sourceId,
                sourceType = sourceType,
                scopeIds = scopeIds,
                properties = emptyList()
            )
    }

    enum class Status {
        Active,
        Exhausted,
        Revoked,
    }

    enum class SourceType {
        Document,
        Request
    }
}
